force-app/main/default/objects/Account/fields/NTE_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Code__c</fullName>
    <label>Latest NTE Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>