force-app/main/default/objects/Account/fields/NTE_Last_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Application_Date__c</fullName>
    <label>Latest NTE Application Date</label>
    <type>DateTime</type>
</CustomField>