force-app/main/default/objects/Account/fields/NTE_Participant__c.field-meta.xml
<CustomField>
    <fullName>NTE_Participant__c</fullName>
    <description>Identifies an organisation created or updated from a converted NTE application.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Organisation</label>
    <type>Checkbox</type>
</CustomField>