force-app/main/default/objects/Account/listViews/NTE_Organisations.listView-meta.xml
<ListView>
    <fullName>NTE_Organisations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>NTE_Source_Form_Type__c</columns>
    <columns>NTE_Booking_Reference__c</columns>
    <columns>NTE_Last_Application_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NTE_Participant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NTE Organisations</label>
</ListView>